--- a/package.json
+++ b/package.json
@@ -1,11 +1,26 @@
 {
   "dependencies": {
+    "query-string": "^6.11.1",
     "bignumber.js": "5.0.0",
+    "ethereumjs-abi": "git+https://github.com/ProjectWyvern/ethereumjs-abi.git",
+    "isomorphic-unfetch": "^3.1.0",
     "wyvern-js": "git+https://github.com/definancer/wyvern-js.git#v3.2.1",
     "wyvern-schemas": "git+https://github.com/definancer/wyvern-schemas.git#v0.11.1"
   },
   "devDependencies": {
+    "@types/chai": "4.2.9",
+    "@types/fbemitter": "^2.0.32",
+    "@types/lodash": "^4.14.92",
+    "@types/node": "^9.3.0",
+    "@types/node-fetch": "2.5.5",
+    "@types/query-string": "^6.1.0",
+    "chai": "^4.1.2",
+    "husky": "^4.2.3",
+    "mocha": "^5.2.0",
     "hd-address": "^3.2.7",
-    "web3": "^1.3.5"
+    "mocha-typescript": "^1.1.17",
+    "web3": "^1.3.5",
+    "typescript": "^2.6.2",
+    "typescript-eslint-parser": "^16.0.0"
   }
 }
