--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
+  "name": "element-js",
+  "version": "1.1.0",
+  "description": "Javascript SDK for the Element ",
+  "main": "lib/index.js",
+  "author": "Project Element Developers",
   "scripts": {
-    "build": "cross-env NODE_ENV=production webpack --config ./webpack.config.js"
+    "build": "tsc"
   },
   "dependencies": {
     "bignumber.js": "^9.0.1",
     "ethereumjs-abi": "git+https://github.com/ProjectWyvern/ethereumjs-abi.git",
+    "node-fetch": "^2.6.1",
+    "ts-node": "^9.1.1",
     "web3": "^1.3.5"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.16",
-    "@types/mocha": "^8.2.2",
     "@types/node": "^12.12.6",
-    "@types/node-fetch": "2.5.5",
-    "chai": "^4.3.4",
-    "hd-address": "^3.2.7",
-    "mocha": "^8.3.2",
+    "prettier": "^2.2.1",
     "typescript": "^4.2.4"
   }
 }
