--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   },
   "dependencies": {
     "bignumber.js": "^9.0.1",
-    "ethereumjs-abi": "git+https://github.com/ProjectWyvern/ethereumjs-abi.git",
-    "node-fetch": "^2.6.1",
-    "ts-node": "^9.1.1",
-    "web3": "^1.3.5"
+    "ethereumjs-abi": "git+https://github.com/ProjectWyvern/ethereumjs-abi.git"
   },
   "devDependencies": {
+    "ts-node": "^9.1.1",
+    "node-fetch": "^2.6.1",
+    "web3": "^1.3.5",
     "@types/node": "^12.12.6",
     "prettier": "^2.2.1",
     "typescript": "^4.2.4"
