--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@types/node-fetch": "^2.5.10",
     "bignumber.js": "^9.0.1",
-    "ethereumjs-abi": "git+https://github.com/ProjectWyvern/ethereumjs-abi.git"
+    "ethereumjs-abi": "git+https://github.com/definancer/ethereumjs-abi.git"
   },
   "devDependencies": {
     "ts-node": "^9.1.1",
