--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ethereumjs-abi": "git+https://github.com/definancer/ethereumjs-abi.git"
   },
   "devDependencies": {
+    "ethers": "^5.2.0",
     "@types/node-fetch": "^2.5.10",
     "ts-node": "^9.1.1",
     "node-fetch": "^2.6.1",
