--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "element-js",
-  "version": "2.3.0",
+  "version": "2.3.1",
   "description": "Javascript SDK for the Element ",
   "main": "lib/index.js",
   "author": "Project Element Developers",
@@ -10,16 +10,17 @@
   },
   "dependencies": {
     "bignumber.js": "^9.0.1",
-    "ethereumjs-abi": "git+https://github.com/definancer/ethereumjs-abi.git"
+    "ethereumjs-abi": "git+https://github.com/definancer/ethereumjs-abi.git",
+    "isomorphic-unfetch": "^3.1.0"
   },
   "devDependencies": {
-    "ethers": "^5.2.0",
-    "@types/node-fetch": "^2.5.10",
-    "ts-node": "^9.1.1",
-    "node-fetch": "^2.6.1",
-    "web3": "^1.3.5",
     "@types/node": "^12.12.6",
+    "@types/node-fetch": "^2.5.10",
+    "ethers": "^5.2.0",
+    "node-fetch": "^2.6.1",
     "prettier": "^2.2.1",
-    "typescript": "^4.2.4"
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4",
+    "web3": "^1.3.5"
   }
 }
