--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
   },
   "dependencies": {
     "bignumber.js": "^9.0.1",
-    "eth-rpc-errors": "^4.0.3",
     "ethereumjs-abi": "git+https://github.com/definancer/ethereumjs-abi.git",
     "isomorphic-unfetch": "^3.1.0"
   },
   "devDependencies": {
-    "https-proxy-agent": "^5.0.0",
+    "graphql": "^15.5.1",
+    "graphql-request": "^3.5.0",
+    "@types/chai": "^4.2.21",
     "@types/node": "^12.12.6",
     "@types/node-fetch": "^2.5.10",
+    "chai": "^4.3.4",
     "ethers": "^5.2.0",
+    "https-proxy-agent": "^5.0.0",
+    "mocha": "^9.0.3",
+    "mocha-typescript": "^1.1.17",
     "node-fetch": "^2.6.1",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
