--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "bignumber.js": "^9.0.1",
     "ethereumjs-abi": "git+https://github.com/definancer/ethereumjs-abi.git",
-    "isomorphic-unfetch": "^3.1.0"
+    "isomorphic-unfetch": "^3.1.0",
+    "graphql": "^15.5.1",
+    "graphql-request": "^3.5.0"
   },
   "devDependencies": {
-    "graphql": "^15.5.1",
-    "graphql-request": "^3.5.0",
     "@types/chai": "^4.2.21",
     "@types/node": "^12.12.6",
     "@types/node-fetch": "^2.5.10",
