--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "element-js",
-  "version": "2.5.3",
+  "name": "@txdev/element-js",
+  "version": "2.5.7",
   "description": "Javascript SDK for the Element ",
   "main": "lib/index.js",
   "author": "Project Element Developers",
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "bignumber.js": "^9.0.1",
-    "ethereumjs-abi": "git+https://github.com/definancer/ethereumjs-abi.git",
+    "@txdev/ethereumjs-abi": "^0.6.6",
     "isomorphic-unfetch": "^3.1.0",
     "graphql": "^15.5.1",
     "graphql-request": "^3.5.0"
