--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@maticnetwork/maticjs": "^2.0.45",
-    "@txdev/ethereumjs-abi": "^0.6.6",
     "bignumber.js": "^9.0.1",
+    "ethereumjs-util": "^7.1.0",
     "graphql": "^15.5.1",
     "graphql-request": "^3.5.0",
-    "isomorphic-unfetch": "^3.1.0"
+    "isomorphic-unfetch": "^3.1.0",
+    "web3": "^1.5.2"
   },
   "devDependencies": {
+    "@maticnetwork/maticjs": "^2.0.45",
     "@types/chai": "^4.2.21",
     "@types/node": "^12.12.6",
     "@types/node-fetch": "^2.5.10",
@@ -25,14 +26,12 @@
     "@typescript-eslint/parser": "^4.29.2",
     "chai": "^4.3.4",
     "eslint": "^7.32.0",
-    "ethers": "^5.2.0",
     "https-proxy-agent": "^5.0.0",
     "mocha": "^9.0.3",
     "mocha-typescript": "^1.1.17",
     "node-fetch": "^2.6.1",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.4",
-    "web3": "^1.3.5"
+    "typescript": "^4.2.4"
   }
 }
