--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@types/crypto-js": "^4.0.2",
     "bignumber.js": "^9.0.1",
+    "crypto-js": "^4.1.1",
     "ethereumjs-util": "^7.1.0",
     "graphql": "^15.5.1",
     "graphql-request": "^3.5.0",
